// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonInfo inactive 1`] = `
<h1
  className="hode hode-innholdstittel hode-dekorert"
>
  Hello
</h1>
`;

exports[`PersonInfo not registered 1`] = `
<h1
  className="hode hode-innholdstittel hode-dekorert"
>
  Hello
</h1>
`;

exports[`PersonInfo without personInfo 1`] = `null`;

exports[`basic green PersonInfo snaphot-test 1`] = `
Array [
  <h1
    className="hode hode-innholdstittel hode-dekorert"
>
    Hello
</h1>,
  <p
    className="arbeidssokerstatus"
>
    <span>
        Du er registrert som "ikke arbeidssøker"
    </span>
    <span />
</p>,
]
`;

exports[`basic green PersonInfo snaphot-test without fgkode/yrke 1`] = `
Array [
  <h1
    className="hode hode-innholdstittel hode-dekorert"
>
    Hello
</h1>,
  <p
    className="arbeidssokerstatus"
>
    <span />
    <span />
</p>,
]
`;
